# ZKTeco

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zkteco/android/graphics/: ImageConverter.java
app/src/main/java/com/zkteco/autk/: IContract.java  MainActivity.java
app/src/main/java/com/zkteco/autk/camera/: CameraBackground.java  CameraBase.java  CameraForeground.java  CameraFront.java  CameraIdentify.java
app/src/main/java/com/zkteco/autk/components/: BaseActivity.java  BaseView.java  EditDialog.java  EnrollActivity.java  IPEditDialog.java  SimpleDialog.java  WelcomeActivity.java
app/src/main/java/com/zkteco/autk/dao/: DatabaseHelper.java  DatabaseUtils.java
app/src/main/java/com/zkteco/autk/models/: EnrollModel.java  TimerTool.java  ZKLiveFaceManager.java
app/src/main/java/com/zkteco/autk/presenters/: BasePresenter.java  EnrollPresenter.java
app/src/main/java/com/zkteco/autk/utils/: BitmapUtil.java  FileUtil.java  ImageUtil.java  (+3 more)
app/src/main/native/: com_zkteco_autk_utils_ImageUtil.h  native-lib.cpp
app/src/main/res/drawable/: corner_layout_blue.xml  corner_layout_blue_alpha.xml  corner_layout_blue_light.xml  edit_dialog_bg.xml  et_underline_blue.xml  et_underline_selected.xml  et_underline_unselected.xml  tv_underline_blue.xml
app/src/main/res/layout/: activity_enroll.xml  alert_ly.xml  et_ly.xml  input_info_ly.xml  ip_et_ly.xml  register_info_ly.xml  welcome_ly.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
(+11 files in other folders)
